fix: 💄 dr info card not like on old site
phone icon too big
left-right padding too big
top-bottom not the same

--- a/src/components/HomeSections/DrInfo/DrActions/DrActions.module.css
+++ b/src/components/HomeSections/DrInfo/DrActions/DrActions.module.css
@@ -12,6 +12,10 @@
   align-self: center;
 }
 
+.DrActions > .Phone {
+  --icon-button-size: 1.5em;
+}
+
 .DrActions .Tooltip {
   padding-inline: 0;
   color: inherit;
