--- a/src/components/HomeSections/DrInfo/DrCard/DrCard.module.css
+++ b/src/components/HomeSections/DrInfo/DrCard/DrCard.module.css
@@ -13,9 +13,9 @@
   grid-template-rows: auto 3em;
   gap: 0px 0px;
 
-  padding-right: 1em;
-  padding-left: 2.5em;
-  padding-block: 1em;
+  padding-right: 0;
+  padding-left: 1.125em;
+  padding-block: 1em 0.5em;
 
   background-color: var(--color-blue-50);
   border-bottom: 1px solid var(--color-blue-100);
@@ -65,18 +65,4 @@
   gap: 0.5em;
   align-items: center;
   align-self: center;
-}
-
-@media only screen and (min-width: 768px) {
-  .InfoCard {
-    padding-right: 0.5em;
-    padding-left: 1.25em;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  .InfoCard {
-    padding-right: 1em;
-    padding-left: 2.5em;
-  }
 }
